# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  make.ps1  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  settings.ini
solver/: pathfinder.py
src/mazegen/: __init__.py  generator.py  patterns.py  utils.py
tests/: test_io.py  test_logic.py
ui/: graphical.py  terminal.py
